--- a/Farming.html
+++ b/Farming.html
@@ -33,11 +33,11 @@
         color: var(--text-color);
         padding: 20px;
         line-height: 1.6;
-        min-height: 100vh;
+        height: 100%;
       }
 
       #game-container {
-        max-width: 800px;
+        width: 100%;
         margin: 0 auto;
         background: linear-gradient(180deg, var(--container-bg) 0%, rgba(26, 47, 26, 0.8) 100%);
         padding: 20px;
