--- a/Flight_chess.html
+++ b/Flight_chess.html
@@ -15,7 +15,7 @@
       body {
         margin: 0;
         padding: 0;
-        min-height: 100vh;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -23,8 +23,7 @@
       }
 
       .game-container {
-        width: 95%;
-        max-width: 800px;
+        width: 195%;
         margin: 10px auto;
         padding: clamp(10px, 3vw, 20px);
         background: #f5f5f5;
@@ -484,4 +483,5 @@
     </script>
   </body>
 </html>
+
 
