--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -34,6 +34,7 @@
 
       /* 游戏容器 */
       .game-container {
+        height:60%;
         position: fixed;
         inset: 0;
         overflow: hidden;
