--- a/Farming.html
+++ b/Farming.html
@@ -21,6 +21,14 @@
         --container-bg: rgba(26, 47, 26, 0.6);
       }
 
+      #game-canvas {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
+        position: relative;
+      }
+
+
       * {
         margin: 0;
         padding: 0;
