--- a/Farming.html
+++ b/Farming.html
@@ -138,7 +138,8 @@
         <button class="choice-btn" onclick="makeChoice('nextDay')">结束当天</button>
       </div>
     </div>
-
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
         // 游戏状态
