--- a/Flight_chess.html
+++ b/Flight_chess.html
@@ -242,6 +242,7 @@
       <button class="btn" onclick="closePopup()">确定</button>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
         const BOARD_SIZE = 64;
@@ -483,6 +484,7 @@
     </script>
   </body>
 </html>
+
 
 
 
