--- a/Gluttonous_Snake.html
+++ b/Gluttonous_Snake.html
@@ -205,6 +205,7 @@
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
         const canvas = document.getElementById('game-canvas');
