--- a/shudoku.html
+++ b/shudoku.html
@@ -259,6 +259,7 @@
       <div class="message" id="message"></div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       let grid = [];
       let solution = [];
@@ -530,4 +531,5 @@
     </script>
   </body>
 </html>
+
 
