--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -34,7 +34,6 @@
 
       /* 游戏容器 */
       .game-container {
-        height:60%;
         position: fixed;
         inset: 0;
         overflow: hidden;
@@ -176,6 +175,7 @@
         }
       }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <audio id="bgm" loop>
@@ -202,7 +202,6 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
         const canvas = document.getElementById('gameCanvas');
@@ -214,7 +213,7 @@
 
         // 游戏状态
         let gameState = {
-          catY: window.innerHeight / 2,
+          catY: (document.getElementById('gameCanvas')?.parentElement?.clientHeight || window.innerHeight) / 2,
           velocity: 0,
           gravity: 0.4,
           flyForce: -0.3,
@@ -238,13 +237,15 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          const vw = document.documentElement.clientWidth;
-          const vh = document.documentElement.clientHeight;
+          const canvas = document.getElementById('gameCanvas');
+          const container = canvas ? canvas.parentElement : document.body;
+          const vw = container.clientWidth;
+          const vh = container.clientHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
-            ? Math.max(80, Math.min(vw * 0.15, vh * 0.15))
-            : Math.max(120, Math.min(vw * 0.2, vh * 0.2));
+            ? Math.max(30, Math.min(vw * 0.1, vh * 0.1))
+            : Math.max(50, Math.min(vw * 0.08, vh * 0.08));
 
           return {
             catSize,
@@ -261,7 +262,9 @@
         class Obstacle {
           constructor() {
             const dims = calculateGameDimensions();
-            const isMobile = window.innerWidth <= 768;
+            const canvas = document.getElementById('gameCanvas');
+            const container = canvas ? canvas.parentElement : document.body;
+            const isMobile = container.clientWidth <= 768;
             this.width = dims.obstacleWidth;
 
             // 优化障碍物高度
@@ -317,7 +320,9 @@
 
           checkCollision(catX, catY) {
             const dims = calculateGameDimensions();
-            const catSize = dims.catSize * (window.innerWidth <= 768 ? 0.7 : 0.6);
+            const canvas = document.getElementById('gameCanvas');
+            const container = canvas ? canvas.parentElement : document.body;
+            const catSize = dims.catSize * (container.clientWidth <= 768 ? 0.7 : 0.6);
             return (
               catX + catSize * 0.7 > this.x &&
               catX + catSize * 0.3 < this.x + this.width &&
@@ -399,12 +404,21 @@
             }
           });
 
-          window.addEventListener('resize', () => {
-            canvas.width = document.documentElement.clientWidth;
-            canvas.height = document.documentElement.clientHeight;
+          function resizeCanvas() {
+            const container = canvas.parentElement;
+            canvas.width = container.clientWidth;
+            canvas.height = container.clientHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-          });
+          }
+
+          window.addEventListener('resize', resizeCanvas);
+
+          // 监听容器大小变化 (iframe 环境)
+          if (window.ResizeObserver) {
+            const resizeObserver = new ResizeObserver(resizeCanvas);
+            resizeObserver.observe(canvas.parentElement);
+          }
         }
 
         // 简化的星星系统
@@ -532,7 +546,7 @@
 
         window.restartGame = function () {
           gameState = {
-            catY: window.innerHeight / 2,
+            catY: (document.getElementById('gameCanvas')?.parentElement?.clientHeight || window.innerHeight) / 2,
             velocity: 0,
             gravity: 0.4,
             flyForce: -0.3,
@@ -578,8 +592,9 @@
         };
 
         // 初始化
-        canvas.width = document.documentElement.clientWidth;
-        canvas.height = document.documentElement.clientHeight;
+        const container = canvas.parentElement;
+        canvas.width = container.clientWidth;
+        canvas.height = container.clientHeight;
         nyanCat.style.display = 'none';
         bgm.volume = 1.0;
         bgm.load();
