--- a/Farming.html
+++ b/Farming.html
@@ -31,18 +31,13 @@
       body {
         background: linear-gradient(135deg, var(--main-bg-dark) 0%, var(--main-bg-light) 100%);
         color: var(--text-color);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
         padding: 20px;
         line-height: 1.6;
+        min-height: 100vh;
       }
 
       #game-container {
-        position: relative;
-        width: 100%;
+        max-width: 800px;
         margin: 0 auto;
         background: linear-gradient(180deg, var(--container-bg) 0%, rgba(26, 47, 26, 0.8) 100%);
         padding: 20px;
@@ -51,13 +46,6 @@
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
       }
 
-      #game-canvas {
-        width: 100%;
-        height: 100%;
-        aspect-ratio: 1;
-        position: relative;
-      }
-      
       #status-bar {
         display: flex;
         gap: 20px;
@@ -126,7 +114,8 @@
 
       <div id="story-text" class="pixel-border">
         这是你的农田。目前杂草丛生，需要清理后才能开始耕种。 你可以种植不同的作物，每种作物的生长周期和收益都不同： -
-        萝卜：种植5金币，5天成熟，售价15金币 - 白菜：种植10金币，7天成熟，售价25金币 - 土豆：种植15金币，10天成熟，售价40金币
+        萝卜：种植5金币，5天成熟，售价15金币 - 白菜：种植10金币，7天成熟，售价25金币 -
+        土豆：种植15金币，10天成熟，售价40金币
       </div>
 
       <div id="choices" class="pixel-border">
@@ -138,7 +127,7 @@
         <button class="choice-btn" onclick="makeChoice('nextDay')">结束当天</button>
       </div>
     </div>
-    
+
     <script>
       $(document).ready(function () {
         // 游戏状态
@@ -304,6 +293,27 @@
             });
           }
           $('#story-text').html(status);
+        }
+
+        // 响应式处理
+        function handleResize() {
+          // 触发CSS重新计算
+          const container = document.getElementById('game-container');
+          if (container) {
+            container.style.fontSize = '';
+            container.offsetHeight; // 强制重排
+          }
+        }
+
+        $(window).on('resize', handleResize);
+
+        // 监听容器大小变化 (iframe 环境)
+        if (window.ResizeObserver) {
+          const resizeObserver = new ResizeObserver(handleResize);
+          const container = document.getElementById('game-container');
+          if (container) {
+            resizeObserver.observe(container);
+          }
         }
 
         // 初始化游戏
