--- a/Flight_chess.html
+++ b/Flight_chess.html
@@ -15,7 +15,7 @@
       body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -23,7 +23,8 @@
       }
 
       .game-container {
-        width: 100%;
+        width: 95%;
+        max-width: 800px;
         margin: 10px auto;
         padding: clamp(10px, 3vw, 20px);
         background: #f5f5f5;
@@ -477,12 +478,44 @@
           initBoard();
         });
 
+        // 响应式处理
+        function handleResize() {
+          // 基于容器大小重新计算CSS变量
+          const root = document.documentElement;
+          const container = document.querySelector('.game-container');
+          if (container) {
+            const containerWidth = container.clientWidth;
+            const cellSize = Math.max(30, Math.min(containerWidth * 0.08, 60));
+            const fontSize = Math.max(14, Math.min(containerWidth * 0.03, 18));
+            const fontSizeLarge = Math.max(20, Math.min(containerWidth * 0.04, 24));
+
+            root.style.setProperty('--cell-size', `${cellSize}px`);
+            root.style.setProperty('--font-size-normal', `${fontSize}px`);
+            root.style.setProperty('--font-size-large', `${fontSizeLarge}px`);
+
+            container.offsetHeight; // 强制重排
+          }
+        }
+
+        $(window).on('resize', handleResize);
+
+        // 监听容器大小变化 (iframe 环境)
+        if (window.ResizeObserver) {
+          const resizeObserver = new ResizeObserver(handleResize);
+          const container = document.querySelector('.game-container');
+          if (container) {
+            resizeObserver.observe(container);
+          }
+        }
+
         // 初始化游戏
         initBoard();
+        handleResize(); // 初始化时设置正确的尺寸
       });
     </script>
   </body>
 </html>
+
 
 
 
