--- a/shudoku.html
+++ b/shudoku.html
@@ -527,30 +527,44 @@
 
       // 响应式处理
       function handleResize() {
-        // 基于容器大小重新计算CSS变量
-        const root = document.documentElement;
-        const container = document.querySelector('.game-container');
-        if (container) {
-          const containerWidth = container.clientWidth;
-          const cellSize = Math.max(30, Math.min(containerWidth * 0.08, 50));
-          const fontSize = Math.max(12, Math.min(containerWidth * 0.025, 16));
+        const vw = Math.min(window.innerWidth, window.parent?.innerWidth || window.innerWidth);
+        const vh = Math.min(window.innerHeight, window.parent?.innerHeight || window.innerHeight);
 
-          root.style.setProperty('--cell-size', `${cellSize}px`);
-          root.style.setProperty('--font-size-normal', `${fontSize}px`);
+        // 动态计算尺寸
+        const maxWidth = Math.min(vw - 40, 600);
+        const cellSize = Math.max(25, Math.min(maxWidth / 12, 50));
+        const fontSize = Math.max(10, Math.min(vw * 0.02, 16));
 
-          container.offsetHeight; // 强制重排
-        }
+        // 动态创建CSS样式
+        const style = document.createElement('style');
+        style.textContent = `
+          :root {
+            --cell-size: ${cellSize}px !important;
+            --font-size-normal: ${fontSize}px !important;
+          }
+          .game-container {
+            width: ${Math.min(95, (maxWidth / vw) * 100)}% !important;
+            max-width: ${maxWidth}px !important;
+          }
+          .sudoku-grid {
+            grid-template-columns: repeat(9, ${cellSize}px) !important;
+            grid-template-rows: repeat(9, ${cellSize}px) !important;
+          }
+          .cell {
+            width: ${cellSize}px !important;
+            height: ${cellSize}px !important;
+            font-size: ${Math.max(10, cellSize * 0.6)}px !important;
+          }
+        `;
+        document.head.appendChild(style);
       }
 
       window.addEventListener('resize', handleResize);
 
-      // 监听容器大小变化 (iframe 环境)
-      if (window.ResizeObserver) {
-        const resizeObserver = new ResizeObserver(handleResize);
-        const container = document.querySelector('.game-container');
-        if (container) {
-          resizeObserver.observe(container);
-        }
+      // iframe环境特殊处理
+      if (window.parent !== window) {
+        window.parent.addEventListener('resize', handleResize);
+        setInterval(handleResize, 1000);
       }
 
       // 初始化游戏
@@ -559,6 +573,7 @@
     </script>
   </body>
 </html>
+
 
 
 
