--- a/Farming.html
+++ b/Farming.html
@@ -101,6 +101,93 @@
         border-width: 2px;
         border-color: var(--border-color);
       }
+
+      /* 响应式设计 - 小窗口适配 */
+      @media (max-width: 600px) {
+        body {
+          padding: 10px;
+          font-size: 12px;
+        }
+
+        #game-container {
+          max-width: 100%;
+          padding: 15px;
+        }
+
+        #status-bar {
+          flex-wrap: wrap;
+          gap: 10px;
+          padding: 8px;
+        }
+
+        .status-item {
+          font-size: 12px;
+          flex: 1 1 auto;
+          min-width: 80px;
+        }
+
+        #story-text {
+          min-height: 150px;
+          padding: 12px;
+          font-size: 13px;
+          line-height: 1.4;
+        }
+
+        #choices {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 8px;
+        }
+
+        .choice-btn {
+          padding: 10px 8px;
+          font-size: 11px;
+          text-align: center;
+          line-height: 1.2;
+        }
+
+        .choice-btn:hover {
+          transform: none;
+        }
+      }
+
+      @media (max-width: 400px) {
+        body {
+          padding: 5px;
+          font-size: 11px;
+        }
+
+        #game-container {
+          padding: 10px;
+        }
+
+        .status-item {
+          font-size: 11px;
+          min-width: 70px;
+        }
+
+        #story-text {
+          min-height: 120px;
+          padding: 10px;
+          font-size: 12px;
+        }
+
+        .choice-btn {
+          padding: 8px 6px;
+          font-size: 10px;
+        }
+      }
+
+      @media (max-width: 300px) {
+        #choices {
+          grid-template-columns: 1fr;
+        }
+
+        .choice-btn {
+          font-size: 9px;
+          padding: 6px 4px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -295,47 +382,8 @@
           $('#story-text').html(status);
         }
 
-        // 响应式处理
-        function handleResize() {
-          const vw = Math.min(window.innerWidth, window.parent?.innerWidth || window.innerWidth);
-          const vh = Math.min(window.innerHeight, window.parent?.innerHeight || window.innerHeight);
-
-          // 动态计算尺寸
-          const maxWidth = Math.min(vw - 40, 800);
-          const fontSize = Math.max(12, Math.min(vw * 0.025, 16));
-          const padding = Math.max(10, Math.min(vw * 0.02, 20));
-
-          // 动态创建CSS样式
-          const style = document.createElement('style');
-          style.textContent = `
-            #game-container {
-              max-width: ${maxWidth}px !important;
-              width: ${Math.min(95, (maxWidth / vw) * 100)}% !important;
-              padding: ${padding}px !important;
-              font-size: ${fontSize}px !important;
-            }
-            .crop-info, .action-buttons {
-              font-size: ${Math.max(11, fontSize * 0.9)}px !important;
-            }
-            button {
-              padding: ${Math.max(8, padding * 0.6)}px ${Math.max(12, padding * 0.8)}px !important;
-              font-size: ${Math.max(11, fontSize * 0.9)}px !important;
-            }
-          `;
-          document.head.appendChild(style);
-        }
-
-        $(window).on('resize', handleResize);
-
-        // iframe环境特殊处理
-        if (window.parent !== window) {
-          window.parent.addEventListener('resize', handleResize);
-          setInterval(handleResize, 1000);
-        }
-
         // 初始化游戏
         updateStatus();
-        handleResize(); // 初始化时设置正确的尺寸
       });
     </script>
   </body>
