--- a/Farming.html
+++ b/Farming.html
@@ -31,16 +31,18 @@
       body {
         background: linear-gradient(135deg, var(--main-bg-dark) 0%, var(--main-bg-light) 100%);
         color: var(--text-color);
-        padding: 20px;
+        padding: 2vw;
         line-height: 1.6;
         min-height: 100vh;
+        font-size: clamp(10px, 2vw, 16px);
       }
 
       #game-container {
-        max-width: 800px;
-        margin: 0 auto;
+        width: 100%;
+        max-width: none;
+        margin: 0;
         background: linear-gradient(180deg, var(--container-bg) 0%, rgba(26, 47, 26, 0.8) 100%);
-        padding: 20px;
+        padding: 2vw;
         border: 2px solid var(--border-color);
         border-radius: 8px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -48,46 +50,53 @@
 
       #status-bar {
         display: flex;
-        gap: 20px;
-        margin-bottom: 20px;
-        padding: 10px;
+        flex-wrap: wrap;
+        gap: 1vw;
+        margin-bottom: 2vw;
+        padding: 1vw;
         background: linear-gradient(90deg, rgba(26, 47, 26, 0.8) 0%, rgba(44, 74, 44, 0.8) 100%);
         border: 1px solid var(--border-color);
         border-radius: 4px;
       }
 
       .status-item {
-        font-size: 14px;
+        font-size: clamp(10px, 1.5vw, 14px);
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+        flex: 1 1 auto;
+        min-width: 20%;
       }
 
       #story-text {
-        min-height: 200px;
-        margin-bottom: 20px;
-        padding: 15px;
+        min-height: 15vw;
+        margin-bottom: 2vw;
+        padding: 2vw;
         background: linear-gradient(180deg, rgba(26, 47, 26, 0.6) 0%, rgba(44, 74, 44, 0.6) 100%);
         border: 1px solid var(--border-color);
         color: var(--highlight);
         border-radius: 4px;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+        font-size: clamp(10px, 1.2vw, 14px);
+        line-height: 1.4;
       }
 
       #choices {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+        gap: 1vw;
       }
 
       .choice-btn {
         background: linear-gradient(90deg, var(--button-bg) 0%, rgba(61, 79, 50, 0.9) 100%);
         border: 1px solid var(--border-color);
         color: var(--text-color);
-        padding: 12px 15px;
+        padding: 1.5vw 2vw;
         cursor: pointer;
-        text-align: left;
+        text-align: center;
         transition: all 0.3s ease;
         border-radius: 4px;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+        font-size: clamp(8px, 1.2vw, 12px);
+        line-height: 1.2;
       }
 
       .choice-btn:hover {
@@ -100,93 +109,6 @@
         border-style: solid;
         border-width: 2px;
         border-color: var(--border-color);
-      }
-
-      /* 响应式设计 - 小窗口适配 */
-      @media (max-width: 600px) {
-        body {
-          padding: 10px;
-          font-size: 12px;
-        }
-
-        #game-container {
-          max-width: 100%;
-          padding: 15px;
-        }
-
-        #status-bar {
-          flex-wrap: wrap;
-          gap: 10px;
-          padding: 8px;
-        }
-
-        .status-item {
-          font-size: 12px;
-          flex: 1 1 auto;
-          min-width: 80px;
-        }
-
-        #story-text {
-          min-height: 150px;
-          padding: 12px;
-          font-size: 13px;
-          line-height: 1.4;
-        }
-
-        #choices {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          gap: 8px;
-        }
-
-        .choice-btn {
-          padding: 10px 8px;
-          font-size: 11px;
-          text-align: center;
-          line-height: 1.2;
-        }
-
-        .choice-btn:hover {
-          transform: none;
-        }
-      }
-
-      @media (max-width: 400px) {
-        body {
-          padding: 5px;
-          font-size: 11px;
-        }
-
-        #game-container {
-          padding: 10px;
-        }
-
-        .status-item {
-          font-size: 11px;
-          min-width: 70px;
-        }
-
-        #story-text {
-          min-height: 120px;
-          padding: 10px;
-          font-size: 12px;
-        }
-
-        .choice-btn {
-          padding: 8px 6px;
-          font-size: 10px;
-        }
-      }
-
-      @media (max-width: 300px) {
-        #choices {
-          grid-template-columns: 1fr;
-        }
-
-        .choice-btn {
-          font-size: 9px;
-          padding: 6px 4px;
-        }
       }
     </style>
   </head>
