--- a/Farming.html
+++ b/Farming.html
@@ -141,49 +141,75 @@
       $(document).ready(function () {
         // 动态计算并应用响应式样式
         function applyDynamicSizing() {
+          // 移除之前的动态样式
+          $('style[data-dynamic]').remove();
+
           const windowWidth = window.innerWidth;
           const windowHeight = window.innerHeight;
 
           // 基于窗口大小计算基础字体大小
-          const baseFontSize = Math.max(10, Math.min(16, windowWidth * 0.025));
-          const padding = Math.max(5, windowWidth * 0.02);
-          const buttonPadding = Math.max(8, windowWidth * 0.015);
+          const baseFontSize = Math.max(8, Math.min(16, windowWidth * 0.03));
+          const padding = Math.max(3, windowWidth * 0.015);
+          const buttonPadding = Math.max(6, windowWidth * 0.012);
+
+          // 判断是否为小屏幕
+          const isSmallScreen = windowWidth < 500;
+          const isTinyScreen = windowWidth < 350;
 
           // 创建动态样式
-          const style = document.createElement('style');
-          style.textContent = `
+          const style = $('<style data-dynamic="true">').text(`
+            * {
+              font-family: 'PixelFont', monospace !important;
+            }
             body {
               font-size: ${baseFontSize}px !important;
               padding: ${padding}px !important;
             }
             #game-container {
-              padding: ${padding * 1.5}px !important;
+              width: 100% !important;
+              max-width: none !important;
+              margin: 0 !important;
+              padding: ${padding * 1.2}px !important;
             }
             #status-bar {
-              gap: ${padding}px !important;
-              padding: ${padding}px !important;
-              margin-bottom: ${padding * 1.5}px !important;
+              display: flex !important;
+              flex-wrap: wrap !important;
+              gap: ${padding * 0.5}px !important;
+              padding: ${padding * 0.8}px !important;
+              margin-bottom: ${padding}px !important;
             }
             .status-item {
-              font-size: ${baseFontSize * 0.9}px !important;
+              font-size: ${baseFontSize * 0.85}px !important;
+              flex: 1 1 auto !important;
+              min-width: 22% !important;
             }
             #story-text {
-              font-size: ${baseFontSize * 0.85}px !important;
-              padding: ${padding * 1.2}px !important;
-              margin-bottom: ${padding * 1.5}px !important;
-              min-height: ${Math.max(80, windowHeight * 0.2)}px !important;
+              font-size: ${baseFontSize * 0.8}px !important;
+              padding: ${padding}px !important;
+              margin-bottom: ${padding}px !important;
+              min-height: ${Math.max(60, windowHeight * 0.15)}px !important;
+              line-height: 1.3 !important;
             }
             #choices {
-              gap: ${padding * 0.8}px !important;
-              grid-template-columns: ${windowWidth < 400 ? '1fr' : 'repeat(auto-fit, minmax(40%, 1fr))'} !important;
+              display: grid !important;
+              grid-template-columns: ${
+                isTinyScreen ? '1fr' : isSmallScreen ? '1fr 1fr' : 'repeat(auto-fit, minmax(40%, 1fr))'
+              } !important;
+              gap: ${padding * 0.6}px !important;
             }
             .choice-btn {
-              font-size: ${baseFontSize * 0.75}px !important;
-              padding: ${buttonPadding}px ${buttonPadding * 1.2}px !important;
-              line-height: 1.2 !important;
+              font-size: ${baseFontSize * 0.7}px !important;
+              padding: ${buttonPadding}px ${buttonPadding * 0.8}px !important;
+              line-height: 1.1 !important;
+              text-align: center !important;
+              border-radius: 3px !important;
             }
-          `;
-          document.head.appendChild(style);
+            .choice-btn:hover {
+              transform: none !important;
+            }
+          `);
+
+          $('head').append(style);
         }
 
         // 初始化时应用动态样式
