--- a/Farming.html
+++ b/Farming.html
@@ -31,18 +31,16 @@
       body {
         background: linear-gradient(135deg, var(--main-bg-dark) 0%, var(--main-bg-light) 100%);
         color: var(--text-color);
-        padding: 2vw;
+        padding: 20px;
         line-height: 1.6;
         min-height: 100vh;
-        font-size: clamp(10px, 2vw, 16px);
       }
 
       #game-container {
-        width: 100%;
-        max-width: none;
-        margin: 0;
+        max-width: 800px;
+        margin: 0 auto;
         background: linear-gradient(180deg, var(--container-bg) 0%, rgba(26, 47, 26, 0.8) 100%);
-        padding: 2vw;
+        padding: 20px;
         border: 2px solid var(--border-color);
         border-radius: 8px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -51,52 +49,48 @@
       #status-bar {
         display: flex;
         flex-wrap: wrap;
-        gap: 1vw;
-        margin-bottom: 2vw;
-        padding: 1vw;
+        gap: 20px;
+        margin-bottom: 20px;
+        padding: 10px;
         background: linear-gradient(90deg, rgba(26, 47, 26, 0.8) 0%, rgba(44, 74, 44, 0.8) 100%);
         border: 1px solid var(--border-color);
         border-radius: 4px;
       }
 
       .status-item {
-        font-size: clamp(10px, 1.5vw, 14px);
+        font-size: 14px;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
         flex: 1 1 auto;
-        min-width: 20%;
+        min-width: 80px;
       }
 
       #story-text {
-        min-height: 15vw;
-        margin-bottom: 2vw;
-        padding: 2vw;
+        min-height: 200px;
+        margin-bottom: 20px;
+        padding: 15px;
         background: linear-gradient(180deg, rgba(26, 47, 26, 0.6) 0%, rgba(44, 74, 44, 0.6) 100%);
         border: 1px solid var(--border-color);
         color: var(--highlight);
         border-radius: 4px;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-        font-size: clamp(10px, 1.2vw, 14px);
-        line-height: 1.4;
       }
 
       #choices {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
-        gap: 1vw;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
       }
 
       .choice-btn {
         background: linear-gradient(90deg, var(--button-bg) 0%, rgba(61, 79, 50, 0.9) 100%);
         border: 1px solid var(--border-color);
         color: var(--text-color);
-        padding: 1.5vw 2vw;
+        padding: 12px 15px;
         cursor: pointer;
-        text-align: center;
+        text-align: left;
         transition: all 0.3s ease;
         border-radius: 4px;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-        font-size: clamp(8px, 1.2vw, 12px);
-        line-height: 1.2;
       }
 
       .choice-btn:hover {
@@ -109,6 +103,128 @@
         border-style: solid;
         border-width: 2px;
         border-color: var(--border-color);
+      }
+
+      /* 响应式样式 */
+      @media (max-width: 600px) {
+        body {
+          padding: 10px;
+          font-size: 12px;
+        }
+
+        #game-container {
+          max-width: 100%;
+          padding: 15px;
+        }
+
+        #status-bar {
+          flex-wrap: wrap;
+          gap: 10px;
+          padding: 8px;
+        }
+
+        .status-item {
+          font-size: 12px;
+          flex: 1 1 auto;
+          min-width: 70px;
+        }
+
+        #story-text {
+          min-height: 150px;
+          padding: 12px;
+          font-size: 13px;
+          line-height: 1.4;
+        }
+
+        .choice-btn {
+          padding: 10px 12px;
+          font-size: 12px;
+        }
+      }
+
+      @media (max-width: 450px) {
+        body {
+          padding: 5px;
+          font-size: 11px;
+        }
+
+        #game-container {
+          padding: 10px;
+        }
+
+        #status-bar {
+          gap: 8px;
+          padding: 6px;
+        }
+
+        .status-item {
+          font-size: 10px;
+          min-width: 60px;
+        }
+
+        #story-text {
+          min-height: 120px;
+          padding: 10px;
+          font-size: 11px;
+        }
+
+        #choices {
+          gap: 8px;
+        }
+
+        .choice-btn {
+          padding: 8px 10px;
+          font-size: 10px;
+          line-height: 1.2;
+        }
+
+        .choice-btn:hover {
+          transform: translateX(2px);
+        }
+      }
+
+      @media (max-width: 350px) {
+        body {
+          padding: 3px;
+          font-size: 10px;
+        }
+
+        #game-container {
+          padding: 8px;
+        }
+
+        #status-bar {
+          gap: 6px;
+          padding: 5px;
+        }
+
+        .status-item {
+          font-size: 9px;
+          min-width: 50px;
+        }
+
+        #story-text {
+          min-height: 100px;
+          padding: 8px;
+          font-size: 10px;
+        }
+
+        #choices {
+          gap: 6px;
+        }
+
+        .choice-btn {
+          padding: 6px 8px;
+          font-size: 9px;
+          line-height: 1.1;
+        }
+      }
+
+      /* 容器宽度自适应 */
+      @media (max-width: 800px) {
+        #game-container {
+          max-width: 95vw;
+        }
       }
     </style>
   </head>
@@ -139,87 +255,6 @@
 
     <script>
       $(document).ready(function () {
-        // 动态计算并应用响应式样式
-        function applyDynamicSizing() {
-          // 移除之前的动态样式
-          $('style[data-dynamic]').remove();
-
-          const windowWidth = window.innerWidth;
-          const windowHeight = window.innerHeight;
-
-          // 基于窗口大小计算基础字体大小
-          const baseFontSize = Math.max(8, Math.min(16, windowWidth * 0.03));
-          const padding = Math.max(3, windowWidth * 0.015);
-          const buttonPadding = Math.max(6, windowWidth * 0.012);
-
-          // 判断是否为小屏幕
-          const isSmallScreen = windowWidth < 500;
-          const isTinyScreen = windowWidth < 350;
-
-          // 创建动态样式
-          const style = $('<style data-dynamic="true">').text(`
-            * {
-              font-family: 'PixelFont', monospace !important;
-            }
-            body {
-              font-size: ${baseFontSize}px !important;
-              padding: ${padding}px !important;
-            }
-            #game-container {
-              width: 100% !important;
-              max-width: none !important;
-              margin: 0 !important;
-              padding: ${padding * 1.2}px !important;
-            }
-            #status-bar {
-              display: flex !important;
-              flex-wrap: wrap !important;
-              gap: ${padding * 0.5}px !important;
-              padding: ${padding * 0.8}px !important;
-              margin-bottom: ${padding}px !important;
-            }
-            .status-item {
-              font-size: ${baseFontSize * 0.85}px !important;
-              flex: 1 1 auto !important;
-              min-width: 22% !important;
-            }
-            #story-text {
-              font-size: ${baseFontSize * 0.8}px !important;
-              padding: ${padding}px !important;
-              margin-bottom: ${padding}px !important;
-              min-height: ${Math.max(60, windowHeight * 0.15)}px !important;
-              line-height: 1.3 !important;
-            }
-            #choices {
-              display: grid !important;
-              grid-template-columns: ${
-                isTinyScreen ? '1fr' : isSmallScreen ? '1fr 1fr' : 'repeat(auto-fit, minmax(40%, 1fr))'
-              } !important;
-              gap: ${padding * 0.6}px !important;
-            }
-            .choice-btn {
-              font-size: ${baseFontSize * 0.7}px !important;
-              padding: ${buttonPadding}px ${buttonPadding * 0.8}px !important;
-              line-height: 1.1 !important;
-              text-align: center !important;
-              border-radius: 3px !important;
-            }
-            .choice-btn:hover {
-              transform: none !important;
-            }
-          `);
-
-          $('head').append(style);
-        }
-
-        // 初始化时应用动态样式
-        applyDynamicSizing();
-
-        // 窗口大小改变时重新计算
-        $(window).resize(function () {
-          applyDynamicSizing();
-        });
-
         // 游戏状态
         let gameState = {
           energy: 100,
